# CPP-Base-With-GTest

./: .gitignore  CMakeLists.txt  ReadMe.md  main.cpp
project/: CMakeLists.txt  Project.cpp  Project.h
project_tests/basic_tests/: CMakeLists.txt  basic_check.cpp
project_tests/lib/gtest-1.11.0/: CMakeLists.txt
